@@ -1,3 +1,8 @@
+2012-04-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* Makefile.am (AWK, PGAWK): Include new $(VALGRIND) variable in
+	command line (now passed in by top-level Makefile).
+
 2012-04-07         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (ordchr2, readfile): Fix so "make diffout" will work
